# fastText-grpc

./: .gitignore  README.md
config/: grpc.conf
grpc/: CMakeLists.txt  generate.sh
grpc/include/: cfasttext.h  client.h  config.h  di.h  service.h
grpc/src/: CMakeLists.txt  client.cc  main.cc  sample.cc  service.cc
php/: config.m4  fasttext.c  php_fasttext.h
php/classes/: ftext.cc  ftext.h
protos/: ftext.proto
